# omarchy-city-783-theme

./: AGENTS.md  DEVPLAN.md  INITINFO.md  README.md  aether.override.css  aether.zed.json  alacritty.toml  btop.theme  cava_theme  chromium.theme  city-783-base24.yaml  city-783.yaml  colors.fish  colors.toml  foot.ini  fzf.fish  ghostty.conf  gtk.css  gum_env.lua  helix.toml  hyprland-preview-share-picker.css  hyprland.conf  hyprland.lua  hyprlock.conf  keyboard.rgb  kitty.conf  mako.ini  neovim.lua  obsidian.css  pi.json  pyproject.toml  shell.toml  steam.css  swayosd.css  vencord.theme.css  vscode-theme.json  walker.css  warp.yaml  waybar.css  wofi.css
scripts/: README.md  preview.sh  validate.sh
waybar-theme/: config.jsonc  config.jsonc.bak.1768288973  config.jsonc.bak.1768289187  config.jsonc.bak.1768290341  config.jsonc.bak.1768290934  config.jsonc.bak.1768292480  config.jsonc.bak.1768292717  config.jsonc.bak.1768293164  config.jsonc.bak.1768324405  config.jsonc.bak.1768363008  config.jsonc.bak.1768363191  config.jsonc.bak.1768364136  config.jsonc.bak.1768439184  config.jsonc.bak.1768439554  config.jsonc.bak.1768439709
